--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -1,13 +1,11 @@
 
-.justify {
-    text-align: justify;
-}
-.center {
+header{
     text-align: center;
 }
 p {
    font-size: 16px;
    font-family: "open sans", sans-serif;
+   text-align: justify;
 }
 body {
     padding: 2% 5% 2% 5%;
