--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -1,7 +1,7 @@
 
 header {
     text-align: center;
-    background-color: gainsboro;
+    background-color:rgba(45, 45, 45, 0.1);
 }
 p {
    font-size: 16px;
