--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -2,6 +2,7 @@
 header {
     text-align: center;
     background-color:rgba(45, 45, 45, 0.1);
+    padding:0% 20% 0% 20%;
 }
 p {
    font-size: 16px;
