--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -1,8 +1,9 @@
 
 header {
+    margin: 0px 50px 0px 50px;
     text-align: center;
     background-color:rgba(45, 45, 45, 0.1);
-    padding:0% 50% 0% 50%;
+    
 }
 p {
    font-size: 16px;
