--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -18,9 +18,10 @@ body {
 footer {
     opacity: 0.6;
 }
-nav {
+a {
     color: black;
+    font-weight: 800;
 }
-nav:hover {
+a:hover {
     color: blue;
 }
