--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -26,3 +26,9 @@ a {
 a:hover {
     color: blue;
 }
+aside {
+    position:fixed; 
+    width:25%; 
+    top:500px; 
+    Bottom:0; right:0; left:90%;
+} 
