css para imagenes

--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -32,3 +32,15 @@ aside {
     top:500px; 
     Bottom:0; right:0; left:90%;
 } 
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+ 
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
