--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -9,15 +9,18 @@ p {
    text-align: justify;
 }
 body {
-    
+    margin: 0px;
     background-color: azure;
-
 }
 section {
-    border: 1px solid gray;
-    border-radius: 5px;
-    margin: 20px 40px;
+    margin: 0px 0px;
     padding: 2% 3% 2% 3%;
+}
+article {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 2% 3% 2% 3%;
+  margin: 25px 0px;
 }
 footer {
     text-align: center;
@@ -26,10 +29,12 @@ footer {
 .topnav {
     background-color: #262626;
     overflow: hidden;
-    display: flex;
+    display: inline-flex;
     justify-content: space-around;
     align-items: center;
-  }
+    position: fixed;
+    width: 100%;
+}
   .topnav  a {
     color: lightgray;
     text-align: center;
