--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -1,69 +1,134 @@
 header {
-    text-align: center;
-    font-size: 32px;
-    font-weight: 800;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 800;
 }
 p {
-   font-size: 16px;
-   font-family: "open sans", sans-serif;
-   text-align: justify;
+ font-size: 1em;
+ font-family: "open sans", sans-serif;
+ text-align: justify;
 }
 body {
-    margin: 0px;
-    background-color: azure;
+  margin: 0;
+  background-color: azure;
+  display: grid;
+  min-height: 100vh;
 }
 section {
-    margin: 0px 0px;
-    padding: 2% 3% 2% 3%;
+  margin: 0 0;
+  padding: 2rem 1.5rem 0rem 1.5rem;
 }
 article {
-  border: 1px solid gray;
-  border-radius: 5px;
-  padding: 2% 3% 2% 3%;
-  margin: 25px 0px;
+border: 0.0625rem solid gray;
+border-radius: 0.3125rem;
+padding: 1rem 1.5rem 1rem 1.5rem;;
+margin: 1.5625rem 0rem;
 }
 footer {
-    text-align: center;
-    opacity: 0.6;
+  text-align: center;
+  opacity: 0.6;
+  margin: 0rem 0rem 1rem 0rem;
 }
 .topnav {
-    background-color: #262626;
-    overflow: hidden;
-    display: inline-flex;
-    justify-content: space-around;
-    align-items: center;
-    position: fixed;
-    width: 100%;
+  background-color: #262626;
+  overflow: hidden;
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
-  .topnav  a {
-    color: lightgray;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  .topnav a:hover {
-    color: white;
-    font-size: 18px;
-  }
+.topnav  a {
+  color: lightgray;
+  text-align: center;
+  padding: 0.875rem 1rem;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  color: white;
+  font-size: 1.125rem;
+}
 aside {
-    position:fixed; 
-    width:25%; 
-    top:500px; 
-    Bottom:0; right:0; left:90%;
+  position:fixed; 
+  width:25%; 
+  top:500px; 
+  Bottom:0; right:0; left:90%;
 } 
 #container {
-    text-align: justify;
-  }
-  #container > div {
-    width: 400px; 
-    display: inline-block;
-    vertical-align: top;
-    *display: inline;
-    zoom: 1;
-  }
-  #container:after {
-    content: "";
+  text-align: justify;
+}
+#container > div {
+  width: 25rem; 
+  display:inline-block;
+  vertical-align: top;
+  *display: inline;
+  zoom: 1;
+}
+#container:after {
+  content: "";
+  width: 100%;
+  display: inline-block;
+}
+.form {
+  position: relative;
+  width: 20rem;
+  height: 3rem;
+  display: block;
+  margin: 1rem 0rem 0rem 0rem;
+}
+.form2{
+  position: relative;
+  width: 20rem;
+  height: 5rem;
+  display: block;
+  margin: 1rem 0rem 0rem 0rem;
+}
+  .form__input, .form__textarea {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    display: inline-block;
+    height: 100%;
+    border: 2px solid gray;
+    border-radius: .2rem;
+    color: black;
+    outline: none;
+    padding: 1.25rem;
+    background: none;
   }
+  
+    .form__input:hover, .form__textarea:hover{
+      border-color:black;
+    }
+
+    .form__input:focus, .form__textarea:focus{
+      border-color:black;
+    }
+
+  .form__label {
+    position: absolute;
+    left: 1rem;
+    top: 0.8rem;
+    padding: 0 0.5rem;
+    color: black;
+    cursor: text;
+    transition: top 200ms ease-in, left 200ms ease-in, 200ms ease-in;
+    background-color: azure;
+  }
+
+
+.form__input:focus ~ .form__label,
+.form__input:not(:placeholder-shown).form__input:not(:focus) ~ .form__label {
+  top: -0.5rem;
+  font-size: 0.8rem;
+  left: 0.8rem;
+}
+
+.form__textarea:focus ~ .form__label,
+.form__textarea:not(:placeholder-shown).form__textarea:not(:focus) ~ .form__label {
+  top: -0.5rem;
+  font-size: 0.8rem;
+  left: 0.8rem;
+}
