--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -50,12 +50,7 @@ footer {
   color: white;
   font-size: 1.125rem;
 }
- .topnav a:active {
-    color: blue;
-    font-size: 1.5rem;
-    font-family: Arial;
-  }
-  .topnav a:focus {
+ .topnav a:active, .topnav a:focus{
     color: blue;
     font-size: 1.5rem;
     font-family: Arial;
