--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -79,6 +79,9 @@ marquee img:hover{
   width: 100%;
   display: inline-block;
 }
+#container img:hover{
+  transform: scaleX(-1);
+}
 .form {
   position: relative;
   width: 20rem;
