--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -39,7 +39,7 @@ footer {
     width: 200px;
     margin: 10px;
     border-radius: 20%;
-    background-color: rgb(173, 255, 47, 0);
+    background-color: rgba(173, 255, 47, 0);
   }
   aside h3{
     font-family: "Comic Sans MS", "Comic Sans", sans-serif;
