--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -47,6 +47,7 @@ footer {
   }
   aside:hover{
     box-shadow: 0px 0px  10px 10px greenyellow;
+    background-color: rgba(173, 255, 47, 100);
 }
 marquee img:hover{
   transform:scale(1.5);
