--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -24,8 +24,9 @@ border-radius: 0.3125rem;
 padding: 1rem 1.5rem 1rem 1.5rem;;
 margin: 1.5625rem 0rem;
 }
-tr img: hover{
-  transform: scaleX(-1); transform: scale(1.4);
+tr img:hover{
+  transform: scaleX(-1); 
+  transform: scale(1.4);
 }
 footer {
   text-align: center;
