--- a/Proyecto compu/General-style.css
+++ b/Proyecto compu/General-style.css
@@ -75,9 +75,10 @@ marquee img:hover{
   font-size: 1.125rem;
 }
  .topnav a:active, .topnav a:focus{
-    color: blue;
-    font-size: 1.5rem;
-    font-family: Arial;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 1.2rem;
+    font-family: 'Times New Roman', Times, serif;
   }
 #container {
   text-align: justify;
